portal-spontan/portal.spontan-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-spontan
  namespace: spontansolutions	
  labels:
    app: portal-spontan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal-spontan
  template:
    metadata:
      labels:
        app: portal-spontan
    spec:
      containers:
        - name: portal-spontan
          image: kosaraju333/portal-spontan:V1
          ports:
            - containerPort: 3000
---
############## Internal Service ##################
apiVersion: v1
kind: Service
metadata:
  name: portal-spontan-internal-service
  namespace: spontansolutions
spec:
  selector:
    app: portal-spontan
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---
############## External Service ##################
#apiVersion: v1
#kind: Service
#metadata:
#  name: portal-spontan-service
#  namespace: spontansolutions
#spec:
#  selector:
#    app: portal-spontan
#  type: LoadBalancer
#  ports:
#    - protocol: TCP
#      port: 3000
#      targetPort: 3000
#      nodePort: 30001
